--- a/src/F4ST.Data.Dapper.MySQL/F4ST.Data.Dapper.MySQL.csproj
+++ b/src/F4ST.Data.Dapper.MySQL/F4ST.Data.Dapper.MySQL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -15,8 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="F4ST.Data" Version="1.1.26" />
-    <PackageReference Include="MySql.Data" Version="8.0.19" />
+    <PackageReference Include="F4ST.Data" Version="1.1.29" />
+    <PackageReference Include="MySql.Data" Version="8.0.21" />
   </ItemGroup>
 
   <ItemGroup>
